Changelog
=========

10.4.dev0 - (unreleased)
------------------------

10.3 - (2015-11-18)
-------------------
* Bug fix: fixed a potential issue when calling GetJobStatus which assumed that
  result and status can be called as attribute
  [ichimdav refs #30695]

10.2 - (2015-11-18)
-------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [ichimdav refs #30695]

10.1 - (2015-11-18)
-------------------
* Bug fix: fixed creation of versions and import of EEAFigure
  when EEAFigureFile had an async job attached to them
  [ichimdav refs #30695]

10.0 - (2015-11-16)
-------------------
* Feature: edit ds_resolveuid to call via python code
  [lucas refs #30065]

9.9 - (2015-11-03)
------------------
* Change: eeafigure_file.pt now use fontawesome classes for filetype icons
  [ichimdav refs #28967]

9.8 - (2015-10-22)
------------------
* BugFix: fix organization view
* Upgrade step: Added indexer method 'getDataOwner' for DataVisulization; Bulk reindex is needed for DavizVisualization content type on getDataOwner index
  [lucas refs #27622]
* Bug fix: fix clipping of title for figuresPhotoAlbumEntry photoAlbumEntryWrapper
  [ichimdav refs #28967]

9.7 - (2015-10-05)
------------------
* Bugfix: set socket timeout to prevent hanging out connection on xmlrpc calling
* Bugfix: greenening xmlrpclib to prevent hanging out connection
  [lucas refs #29063]

9.6 - (2015-09-22)
------------------
* Bugfix: removed initialization of Figure.Load which is directly loaded when needed
  by eeafigure_view and eeafigurefile_view
  [ichimdav refs #28953]
* Bugfix: Fixed error on the @@convertFigures view.
  [chiridra refs #28806]
* Bug fix: Pillow 2.9.0 implemented eps patch but has a resolution issue. Re-added a patch'
           Fix patch to work with pillow 2.9.0
  [lucas refs #28893]

9.5 - (2015-09-10)
------------------
* Change: cleaned dataservice.view.js of leftover jqzoom code and added basic info